--- a/code/sass/components/_header.scss
+++ b/code/sass/components/_header.scss
@@ -294,12 +294,14 @@
 .header__fishschool__fish--5 {
 	top: 10px;
 	left: 31px;
+	opacity: 0.8;
 }
 
 .header__fishschool__fish--6 {
 	top: 16px;
 	left: 39px;
 	transform: rotate( -12deg );
+	opacity: 0.7;
 }
 
 .header__fishschool__fish--7 {
