--- a/code/sass/style.scss
+++ b/code/sass/style.scss
@@ -15,3 +15,5 @@
 @import 'components/footer';
 @import 'components/examples';
 @import 'components/cheats';
+@import 'components/toc';
+@import 'components/content';
