--- a/code/sass/components/_btn.scss
+++ b/code/sass/components/_btn.scss
@@ -1,25 +1,31 @@
 .btn {
 	display: inline-block;
-	padding: 1rem 2rem;
-	background-color: $color-Hero-Background-light;
+	padding: 0.5rem 1rem;
+	background-color: #fff;
 	color: $color-Text;
 	border-radius: 8px;
 	border: 3px solid $color-Text;
 	font-size: 1.125rem;
+	font-weight: bold;
 	text-decoration: none;
 	transition: background 0.2s ease;
 
 	&:focus {
-		outline: 3px solid $color-Focus;
+		border-color: $color-Focus;
 		border-radius: 0;
+		outline: none;
 	}
 
-	&.btn--soft {
-		background-color: transparent;
-	}
-
-	&.btn--soft:hover,
 	&:hover {
-		background-color: $color-Hero-Background;
+		background-color: $color-Hero-Background-light;
+	}
+
+	&.btn--block {
+		display: block;
+		text-align: center;
+	}
+
+	&.btn--is-hidden {
+		display: none;
 	}
 }
