--- a/code/sass/components/_cta.scss
+++ b/code/sass/components/_cta.scss
@@ -4,11 +4,19 @@
 	background-color: $color-Background-light;
 	margin-bottom: 8rem;
 
-	@media screen and ( min-width: 760px ) {
+	@media screen and ( min-width: 720px ) {
 		margin-bottom: 13rem;
 	}
 
 	@include clearfix();
+}
+
+.cta__section__wrapper {
+	@media screen and ( min-width: 1000px ) {
+		display: flex;
+		flex-direction: row-reverse;
+		align-items: center;
+	}
 }
 
 @media screen and ( min-width: 1000px ) {
@@ -53,7 +61,7 @@
 .cta__section__body.body {
 	padding-bottom: 2rem;
 
-	@media screen and ( min-width: 760px ) {
+	@media screen and ( min-width: 720px ) {
 		padding-bottom: 6rem;
 	}
 
@@ -70,10 +78,11 @@
 	height: auto;
 
 	@media screen and ( min-width: 480px ) {
-		height: auto;
-		max-width: none;
-		width: auto;
-		max-height: 20rem;
+		max-width: 32rem;
+	}
+
+	@media screen and ( min-width: 1000px ) {
+		margin-top: -3rem;
 	}
 }
 
@@ -89,8 +98,8 @@
 		display: none;
 	}
 
-	@media screen and ( min-width: 760px ) {
-		max-width: 43rem;
+	@media screen and ( min-width: 720px ) {
+		max-width: 41.5rem;
 		margin: 0 auto;
 
 		.code__stdout {
