--- a/code/sass/components/_content.scss
+++ b/code/sass/components/_content.scss
@@ -1,8 +1,12 @@
 .content {
+	position: relative;
+	padding-top: 3rem;
+
 	pre code {
 		border-radius: 3px;
 		position: relative;
 		padding-top: 2.5rem;
+		padding-bottom: 1rem;
 
 		&:before {
 			content: '';
@@ -30,5 +34,31 @@
 			background-repeat: no-repeat;
 			background-position: center;
 		}
+	}
+
+	h1,
+	h2,
+	h3,
+	h4,
+	h5,
+	h6 {
+		margin-top: 0;
+	}
+}
+
+.content__link {
+	position: absolute;
+	top: 3.5rem;
+	left: 0.25rem;
+	font-size: 1rem;
+	display: none;
+
+	.content:hover & {
+		display: block;
+	}
+
+	@media screen and ( min-width: 480px ) {
+		font-size: 1.5rem;
+		top: 3.25rem;
 	}
 }
