added docs partials
Signed-off-by: Dominik Wilkowski <Hi@Dominik-Wilkowski.com>

--- a/code/sass/components/_code.scss
+++ b/code/sass/components/_code.scss
@@ -16,7 +16,7 @@
 	&:before {
 		content: '$';
 		display: inline-block;
-		color: #666;
+		color: lighten( $color-Text, 30 );
 		margin-right: 0.5rem;
 	}
 }
