--- a/code/sass/components/_content.scss
+++ b/code/sass/components/_content.scss
@@ -1,5 +1,17 @@
 .content {
+	padding: 0 1rem;
+
+	@media screen and ( min-width: 480px ) {
+		padding: 0 2rem;
+	}
+}
+
+.content {
+	position: relative;
 	padding-top: 3rem;
+	max-width: 42em;
+	margin-left: auto;
+	margin-right: auto;
 
 	pre {
 		transform: translate3d( 0, 0, 0 );
