--- a/code/sass/components/_toc.scss
+++ b/code/sass/components/_toc.scss
@@ -1,18 +1,41 @@
 .toc {
-	margin: 5rem 1rem 8rem 1rem;
-
-	@media screen and ( min-width: 480px ) {
-		margin: 5rem 2rem 8rem 2rem;
-	}
-
+	margin: 0 1rem 0 1rem;
 	overflow: hidden;
+
+	@media screen and ( min-width: 650px ) {
+		padding-top: 3rem;
+	}
+}
+
+.toc__section__headline {
+	margin: 0.5rem 0 0 0;
+	font-size: 1.2rem;
 }
 
 .toc__section {
 
-	@media screen and ( min-width: 1000px ) {
+	ul {
+		display: none;
+	}
+
+	&.toc__section--active ul {
+		display: block;
+	}
+
+	@media screen and ( min-width: 700px ) {
 		width: 33.333333333%;
 		float: left;
+
+		ul,
+		&.toc__section--active ul {
+			display: block;
+		}
+	}
+
+	@media screen and ( min-width: 980px ) {
+		margin-bottom: 2.5rem;
+		float: none;
+		width: auto;
 	}
 
 	ul {
@@ -28,8 +51,8 @@
 	li {
 		margin: 0.5rem 0;
 	}
+}
 
-	h2 {
-		font-size: 2rem;
-	}
+.toc__section--active .toc__section__headline {
+	font-weight: bold;
 }
