added content for devs and basics, fixed docs
Signed-off-by: Dominik Wilkowski <Hi@Dominik-Wilkowski.com>

--- a/code/sass/base/_structure.scss
+++ b/code/sass/base/_structure.scss
@@ -69,7 +69,7 @@ code {
 	font-size: 85%;
 	background-color: $color-Background;
 	border-radius: 3px;
-	color: #000;
+	color: #fff;
 
 	pre > & {
 		overflow: auto;
