--- a/code/sass/components/_toc.scss
+++ b/code/sass/components/_toc.scss
@@ -13,9 +13,12 @@
 }
 
 .toc__section {
+	margin-bottom: 1rem;
 
 	ul {
 		display: none;
+		list-style: none;
+		margin: 0 0 0 0.5rem;
 	}
 
 	&.toc__section--active ul {
@@ -23,6 +26,7 @@
 	}
 
 	@media screen and ( min-width: 700px ) {
+		margin-bottom: 0;
 		width: 33.333333333%;
 		float: left;
 
@@ -36,11 +40,6 @@
 		margin-bottom: 2.5rem;
 		float: none;
 		width: auto;
-	}
-
-	ul {
-		list-style: none;
-		margin: 0;
 	}
 
 	h2,
