--- a/components/files/navigation/index.html
+++ b/components/files/navigation/index.html
@@ -28,9 +28,28 @@
       &lt;/a&gt;
     &lt;/li&gt;
   &lt;/ul&gt;
-&lt;/nav&gt;</code></pre></details></div><div id="navigation/toc" class="cuttlebelle-docs__main__component"><h2 class="cuttlebelle-docs__main__component__name">navigation/toc</h2><div class="cuttlebelle-docs__main__component__example"><div></div></div><pre class="cuttlebelle-docs__main__component__yaml"><div><span class="cuttlebelle-yaml-line">layout: navigation/toc</span>
+&lt;/nav&gt;</code></pre></details></div><div id="navigation/toc" class="cuttlebelle-docs__main__component"><h2 class="cuttlebelle-docs__main__component__name">navigation/toc</h2><div class="cuttlebelle-docs__main__component__example"><div><div class="toc"><nav class="toc__section toc__section--0"><h2 class="toc__section__headline"><a href="../page1">Page 1</a></h2><ul></ul></nav><nav class="toc__section toc__section--1 toc__section--active"><h2 class="toc__section__headline"><a href=".">Page 2</a></h2><ul></ul></nav><nav class="toc__section toc__section--2"><h2 class="toc__section__headline"><a href="nested">Nested in page 2</a></h2><ul></ul></nav></div></div></div><pre class="cuttlebelle-docs__main__component__yaml"><div><span class="cuttlebelle-yaml-line">layout: navigation/toc</span>
 <span class="cuttlebelle-yaml-line">sections:
   - page1
-  - page1/nested
-  - page2</span>
-</div></pre><details class="cuttlebelle-docs__main__component__html"><summary class="cuttlebelle-docs__main__component__html__showhide">Show/Hide</summary><pre><code></code></pre></details></div></div></main></body></html>
+  - page2
+  - page2/nested</span>
+</div></pre><details class="cuttlebelle-docs__main__component__html"><summary class="cuttlebelle-docs__main__component__html__showhide">Show/Hide</summary><pre><code>&lt;div class=&quot;toc&quot;&gt;
+  &lt;nav class=&quot;toc__section toc__section--0&quot;&gt;
+    &lt;h2 class=&quot;toc__section__headline&quot;&gt;
+      &lt;a href=&quot;../page1&quot;&gt;Page 1&lt;/a&gt;
+    &lt;/h2&gt;
+    &lt;ul&gt;&lt;/ul&gt;
+  &lt;/nav&gt;
+  &lt;nav class=&quot;toc__section toc__section--1 toc__section--active&quot;&gt;
+    &lt;h2 class=&quot;toc__section__headline&quot;&gt;
+      &lt;a href=&quot;.&quot;&gt;Page 2&lt;/a&gt;
+    &lt;/h2&gt;
+    &lt;ul&gt;&lt;/ul&gt;
+  &lt;/nav&gt;
+  &lt;nav class=&quot;toc__section toc__section--2&quot;&gt;
+    &lt;h2 class=&quot;toc__section__headline&quot;&gt;
+      &lt;a href=&quot;nested&quot;&gt;Nested in page 2&lt;/a&gt;
+    &lt;/h2&gt;
+    &lt;ul&gt;&lt;/ul&gt;
+  &lt;/nav&gt;
+&lt;/div&gt;</code></pre></details></div></div></main></body></html>
