--- a/code/sass/base/_structure.scss
+++ b/code/sass/base/_structure.scss
@@ -69,7 +69,7 @@ code {
 	font-size: 85%;
 	background-color: $color-Background;
 	border-radius: 3px;
-	color: #fff;
+	color: #000;
 
 	pre > & {
 		overflow: auto;
@@ -77,6 +77,7 @@ code {
 		padding: 0.6em 1em;
 		background-color: $color-Text;
 		border-radius: 0;
+		color: #fff;
 	}
 }
 
