added content, tweaks, pixel pushing
Signed-off-by: Dominik Wilkowski <Hi@Dominik-Wilkowski.com>

--- a/code/sass/components/_examples.scss
+++ b/code/sass/components/_examples.scss
@@ -1,14 +1,13 @@
 .examples {
-	background-color: $color-Background-light;
 	overflow: hidden;
-	padding-bottom: 5rem;
+	padding-bottom: 3rem;
 
 	@media screen and ( min-width: 650px ) {
-		padding: 10rem 0;
+		padding: 4rem 0;
 	}
 
 	@media screen and ( min-width: 1250px ) {
-		padding: 10rem 4rem;
+		padding: 4rem 4rem;
 	}
 }
 
@@ -36,7 +35,7 @@
 
 		@media screen and ( min-width: 650px ) {
 			width: 100%;
-			max-width: 31rem;
+			max-width: 35rem;
 			margin-left: auto;
 			margin-right: auto;
 		}
@@ -44,11 +43,8 @@
 		@media screen and ( min-width: 1110px ) {
 			display: flex;
 			flex-direction: column;
-			justify-content: space-between;
 			float: left;
-			width: 33.333333333%;
-			margin-right: 1rem;
-			margin-left: 1rem;
+			width: 50%;
 		}
 	}
 }
@@ -74,6 +70,11 @@
 	}
 }
 
+.examples__list__text {
+	max-width: 27rem;
+	margin: 0 auto;
+}
+
 .examples__list__headline {
 	font-size: 1.2rem;
 	font-weight: bold;
@@ -86,5 +87,8 @@
 
 .examples__list__example {
 	display: block;
-	margin-top: 2rem;
+
+	.content {
+		padding-top: 1rem;
+	}
 }
