--- a/components/files/cheats/index.html
+++ b/components/files/cheats/index.html
@@ -27,7 +27,7 @@ New paragraph
       ```markdown
       Text with a single **bold** word.
       ```</span>
-</div></pre><details class="cuttlebelle-docs__main__component__html"><summary class="cuttlebelle-docs__main__component__html__showhide">Show/Hide</summary><pre><code>&lt;div id=&quot;Markdown&quot; class=&quot;cheat&quot;&gt;
+</div></pre><div class="cuttlebelle-docs__main__component__html"><details><summary class="cuttlebelle-docs__main__component__html__showhide">Show/Hide</summary><pre><code>&lt;div id=&quot;Markdown&quot; class=&quot;cheat&quot;&gt;
   &lt;h3 class=&quot;cheat__headline&quot;&gt;Markdown&lt;/h3&gt;
   &lt;div class=&quot;cheat__description&quot;&gt;
     &lt;div&gt;
@@ -67,13 +67,13 @@ New paragraph
       &lt;/div&gt;
     &lt;/div&gt;
   &lt;/details&gt;
-&lt;/div&gt;</code></pre></details></div><div id="cheats/wrapper" class="cuttlebelle-docs__main__component"><h2 class="cuttlebelle-docs__main__component__name">cheats/wrapper</h2><div class="cuttlebelle-docs__main__component__example"><div><section class="cheats"><div><img src="http://via.placeholder.com/700x100?text=partial" class="cuttlebelle-partial" /> <img src="http://via.placeholder.com/700x100?text=partial" class="cuttlebelle-partial" /> </div></section></div></div><pre class="cuttlebelle-docs__main__component__yaml"><div><span class="cuttlebelle-yaml-line">layout: cheats/wrapper</span>
+&lt;/div&gt;</code></pre></details></div></div><div id="cheats/wrapper" class="cuttlebelle-docs__main__component"><h2 class="cuttlebelle-docs__main__component__name">cheats/wrapper</h2><div class="cuttlebelle-docs__main__component__example"><div><section class="cheats"><div><img src="http://via.placeholder.com/700x100?text=partial" class="cuttlebelle-partial" /> <img src="http://via.placeholder.com/700x100?text=partial" class="cuttlebelle-partial" /> </div></section></div></div><pre class="cuttlebelle-docs__main__component__yaml"><div><span class="cuttlebelle-yaml-line">layout: cheats/wrapper</span>
 <span class="cuttlebelle-yaml-line">cheats: 
   - partial1.md
   - partial2.md
   - partial3.md</span>
-</div></pre><details class="cuttlebelle-docs__main__component__html"><summary class="cuttlebelle-docs__main__component__html__showhide">Show/Hide</summary><pre><code>&lt;section class=&quot;cheats&quot;&gt;
+</div></pre><div class="cuttlebelle-docs__main__component__html"><details><summary class="cuttlebelle-docs__main__component__html__showhide">Show/Hide</summary><pre><code>&lt;section class=&quot;cheats&quot;&gt;
   &lt;div&gt;
     &lt;img src=&quot;http://via.placeholder.com/700x100?text=partial&quot; class=&quot;cuttlebelle-partial&quot; /&gt;
     &lt;img src=&quot;http://via.placeholder.com/700x100?text=partial&quot; class=&quot;cuttlebelle-partial&quot; /&gt; &lt;/div&gt;
-&lt;/section&gt;</code></pre></details></div></div></main></body></html>
+&lt;/section&gt;</code></pre></details></div></div></div></main></body></html>
