--- a/components/files/navigation/index.html
+++ b/components/files/navigation/index.html
@@ -6,7 +6,7 @@
    link: /docs
  - name: github  # the string 'github' will have the GitHub logo attached to it
    link: https://github.com/cuttlebelle/cuttlebelle</span>
-</div></pre><details class="cuttlebelle-docs__main__component__html"><summary class="cuttlebelle-docs__main__component__html__showhide">Show/Hide</summary><pre><code>&lt;nav class=&quot;nav&quot;&gt;
+</div></pre><div class="cuttlebelle-docs__main__component__html"><details><summary class="cuttlebelle-docs__main__component__html__showhide">Show/Hide</summary><pre><code>&lt;nav class=&quot;nav&quot;&gt;
   &lt;ul&gt;
     &lt;li class=&quot;nav__link nav__link--fixed&quot;&gt;
       &lt;a href=&quot;..&quot;&gt;
@@ -28,12 +28,12 @@
       &lt;/a&gt;
     &lt;/li&gt;
   &lt;/ul&gt;
-&lt;/nav&gt;</code></pre></details></div><div id="navigation/toc" class="cuttlebelle-docs__main__component"><h2 class="cuttlebelle-docs__main__component__name">navigation/toc</h2><div class="cuttlebelle-docs__main__component__example"><div><div class="toc"><nav class="toc__section toc__section--0"><h2 class="toc__section__headline"><a href="../page1">Page 1</a></h2><ul></ul></nav><nav class="toc__section toc__section--1 toc__section--active"><h2 class="toc__section__headline"><a href=".">Page 2</a></h2><ul></ul></nav><nav class="toc__section toc__section--2"><h2 class="toc__section__headline"><a href="nested">Nested in page 2</a></h2><ul></ul></nav></div></div></div><pre class="cuttlebelle-docs__main__component__yaml"><div><span class="cuttlebelle-yaml-line">layout: navigation/toc</span>
+&lt;/nav&gt;</code></pre></details></div></div><div id="navigation/toc" class="cuttlebelle-docs__main__component"><h2 class="cuttlebelle-docs__main__component__name">navigation/toc</h2><div class="cuttlebelle-docs__main__component__example"><div><div class="toc"><nav class="toc__section toc__section--0"><h2 class="toc__section__headline"><a href="../page1">Page 1</a></h2><ul></ul></nav><nav class="toc__section toc__section--1 toc__section--active"><h2 class="toc__section__headline"><a href=".">Page 2</a></h2><ul></ul></nav><nav class="toc__section toc__section--2"><h2 class="toc__section__headline"><a href="nested">Nested in page 2</a></h2><ul></ul></nav></div></div></div><pre class="cuttlebelle-docs__main__component__yaml"><div><span class="cuttlebelle-yaml-line">layout: navigation/toc</span>
 <span class="cuttlebelle-yaml-line">sections:
   - page1
   - page2
   - page2/nested</span>
-</div></pre><details class="cuttlebelle-docs__main__component__html"><summary class="cuttlebelle-docs__main__component__html__showhide">Show/Hide</summary><pre><code>&lt;div class=&quot;toc&quot;&gt;
+</div></pre><div class="cuttlebelle-docs__main__component__html"><details><summary class="cuttlebelle-docs__main__component__html__showhide">Show/Hide</summary><pre><code>&lt;div class=&quot;toc&quot;&gt;
   &lt;nav class=&quot;toc__section toc__section--0&quot;&gt;
     &lt;h2 class=&quot;toc__section__headline&quot;&gt;
       &lt;a href=&quot;../page1&quot;&gt;Page 1&lt;/a&gt;
@@ -52,4 +52,4 @@
     &lt;/h2&gt;
     &lt;ul&gt;&lt;/ul&gt;
   &lt;/nav&gt;
-&lt;/div&gt;</code></pre></details></div></div></main></body></html>
+&lt;/div&gt;</code></pre></details></div></div></div></main></body></html>
