--- a/code/sass/components/_content.scss
+++ b/code/sass/components/_content.scss
@@ -83,6 +83,13 @@
 	td {
 		padding: 0.5rem;
 	}
+
+	img {
+		display: block;
+		max-width: 100%;
+		box-shadow: 0 0 11px -3px rgba( 0, 0, 0, 0.5 );
+		margin: 1rem 0;
+	}
 }
 
 .content__link {
@@ -100,4 +107,11 @@
 		font-size: 1.5rem;
 		top: 3.25rem;
 	}
+}
+
+.content__icon {
+	display: block;
+	margin: 0 auto;
+	width: 100%;
+	max-height: 20rem;
 }
