--- a/code/sass/components/_tiles.scss
+++ b/code/sass/components/_tiles.scss
@@ -11,6 +11,12 @@
 	display: flex;
 	flex-wrap: wrap;
 	overflow: hidden;
+
+	&:last-child {
+		.tiles__section {
+			padding-bottom: 3rem;
+		}
+	}
 }
 
 @media screen and ( min-width: 650px ) {
@@ -56,7 +62,7 @@
 
 .tiles__section__body__icon {
 	height: 100%;
-	max-height: 8rem;
-	width: auto;
+	max-height: 15rem;
+	width: 100%;
 	margin: 0 auto;
 }
