--- a/components/files/index.html
+++ b/components/files/index.html
@@ -8,7 +8,7 @@ common sailors, captains of vessels, skippers, both of Europe and America, naval
 continents, were deeply interested in the matter.
 
 For some time past vessels had been met by "an enormous thing," a long object, spindle-shaped, occasionally phosphorescent, and infinitely larger and more rapid
-in its movements than a whale...</div></pre><details class="cuttlebelle-docs__main__component__html"><summary class="cuttlebelle-docs__main__component__html__showhide">Show/Hide</summary><pre><code>&lt;footer class=&quot;footer&quot;&gt;
+in its movements than a whale...</div></pre><div class="cuttlebelle-docs__main__component__html"><details><summary class="cuttlebelle-docs__main__component__html__showhide">Show/Hide</summary><pre><code>&lt;footer class=&quot;footer&quot;&gt;
   &lt;svg role=&quot;img&quot; title=&quot;&quot; viewBox=&quot;0 0 800 9&quot; class=&quot;footer__bottom&quot;&gt;
     &lt;title&gt;&lt;/title&gt;
     &lt;desc&gt;&lt;/desc&gt;
@@ -48,4 +48,4 @@ in its movements than a whale...</div></pre><details class="cuttlebelle-docs__ma
     &lt;img src=&quot;http://via.placeholder.com/700x100?text=partial&quot; class=&quot;cuttlebelle-partial&quot; /&gt;
     &lt;img src=&quot;http://via.placeholder.com/700x100?text=partial&quot; class=&quot;cuttlebelle-partial&quot; /&gt;
     &lt;img src=&quot;http://via.placeholder.com/700x100?text=partial&quot; class=&quot;cuttlebelle-partial&quot; /&gt; &lt;/div&gt;
-&lt;/footer&gt;</code></pre></details></div></div></main></body></html>
+&lt;/footer&gt;</code></pre></details></div></div></div></main></body></html>
