--- a/code/sass/components/_content.scss
+++ b/code/sass/components/_content.scss
@@ -94,7 +94,7 @@
 
 .content__link {
 	position: absolute;
-	top: 3.5rem;
+	top: 5.3rem;
 	left: 0.25rem;
 	font-size: 1rem;
 	display: none;
@@ -105,7 +105,15 @@
 
 	@media screen and ( min-width: 480px ) {
 		font-size: 1.5rem;
-		top: 3.25rem;
+		top: 5rem;
+	}
+}
+
+.content__edit-this-page {
+	opacity: 0.5;
+
+	&:hover {
+		opacity: 1;
 	}
 }
 
