added getInitialProps to docs, fixed styling, fixed proptypes, updated deps
Signed-off-by: Dominik Wilkowski <Hi@Dominik-Wilkowski.com>

--- a/code/sass/style.scss
+++ b/code/sass/style.scss
@@ -2,6 +2,7 @@
 @import 'base/reset';
 @import 'base/variables';
 @import 'base/structure';
+@import 'base/markdown';
 @import 'base/highlighter';
 
 // Our components
