Add docs on installing NPM Remark plugin.

--- a/code/sass/components/_content.scss
+++ b/code/sass/components/_content.scss
@@ -57,12 +57,15 @@
 	}
 
 	h1,
-	h2,
+	h2 {
+		margin-top: 0;
+	}
+
 	h3,
 	h4,
 	h5,
 	h6 {
-		margin-top: 0;
+		margin-bottom: 0.33em;
 	}
 
 	hr {
